fix overflow

--- a/my-react-app/src/styles/GameCollection.css
+++ b/my-react-app/src/styles/GameCollection.css
@@ -21,7 +21,6 @@
     gap: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
-    margin-left: 2%;
   }
   
   .game-slot {
